--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "program": "${workspaceFolder}/src/Back/bin/Debug/net6.0/Back.dll",
             "args": ["--run", "${workspaceFolder}/examples/arithmetic.back"],
             "cwd": "${workspaceFolder}/src/Back",
-            "console": "internalConsole",
+            "console": "externalTerminal",
             "stopAtEntry": false
         },
         {
